--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,6 @@ name = "lets_try_again"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-actix-web = "4.5.1"
-serde = {version = "*", features = ["derive"]}
+httparse = "1.8.0"
 
